missed a lot of files on last commit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>TypeScript, Angular and RequireJS</title>
-	<script src="/lib/require.js" data-main="/dist/requireMain"></script>
+	<script src="/lib/require.js" data-main="/dist/main"></script>
 </head>
 <body>
+
+	<h1>Test App</h1>
+	<testing></testing>
 
 </body>
 </html>
