Cleaned up unused dependencies Restructured everything (again) Added LESS/CSS in

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>TypeScript, Angular and RequireJS</title>
-	<script src="/lib/require.js" data-main="/dist/main"></script>
+	<link rel="stylesheet" href="/dist/tsar-mainVariant.min.css" />
+	<script src="/lib/require.js" data-main="/dist/tsar-mainVariant.min"></script>
 </head>
 <body>
 
